--- a/login/templates/login/log_in.html
+++ b/login/templates/login/log_in.html
@@ -8,24 +8,13 @@
     <script type="text/javascript" src='{{ STATIC_URL }}js/backbone-min.js'></script>
     <script type="text/javascript" src='{{ STATIC_URL }}js/500px.js'></script>
     <script type="text/javascript">
-    /* Add a X-CSRFToken header to all ajax requests that are local to this domain.
-     *
-     * This fixes the implementation of CSRF validation for Ajax requests in Django 1.2.5 
-     * and ensures developers writing Javascript code need not worry about including this information
-     * in their Ajax requests
-     *
-     * Reference: http://docs.djangoproject.com/en/dev/ref/contrib/csrf/#ajax
-     */
-    $('html').ajaxSend(function(event, xhr, settings) {
-        // We use this extensions file in the django admin as well, where the jQuery
-        // namespace differs. Be safe!
-        $ = $ || jQuery || django.jQuery; 
+        // using jQuery
         function getCookie(name) {
             var cookieValue = null;
             if (document.cookie && document.cookie != '') {
                 var cookies = document.cookie.split(';');
                 for (var i = 0; i < cookies.length; i++) {
-                    var cookie = $.trim(cookies[i]);
+                    var cookie = jQuery.trim(cookies[i]);
                     // Does this cookie string begin with the name we want?
                     if (cookie.substring(0, name.length + 1) == (name + '=')) {
                         cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
@@ -35,11 +24,7 @@
             }
             return cookieValue;
         }
-        if (!(/^http:.*/.test(settings.url) || /^https:.*/.test(settings.url))) {
-            // Only send the token to relative URLs i.e. locally.
-            xhr.setRequestHeader("X-CSRFToken", getCookie('csrftoken'));
-        }
-    });
+        var csrftoken = getCookie('csrftoken');
     </script>
     <script type="text/javascript" src='{{ STATIC_URL }}login/js/login.js'></script>
 	<script type="text/javascript">
