--- a/login/templates/login/log_in.html
+++ b/login/templates/login/log_in.html
@@ -25,6 +25,18 @@
             return cookieValue;
         }
         var csrftoken = getCookie('csrftoken');
+        function csrfSafeMethod(method) {
+            // these HTTP methods do not require CSRF protection
+            return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+        }
+        $.ajaxSetup({
+            crossDomain: false, // obviates need for sameOrigin test
+            beforeSend: function(xhr, settings) {
+                if (!csrfSafeMethod(settings.type)) {
+                    xhr.setRequestHeader("X-CSRFToken", csrftoken);
+                }
+            }
+        });
     </script>
     <script type="text/javascript" src='{{ STATIC_URL }}login/js/login.js'></script>
 	<script type="text/javascript">
